# FlyChams-ROS2-v1.3.1

./: .gitignore  README.md
config/: .~lock.Configuration.xlsx#  Configuration.xlsx  settings.json
config/Trajectories/LowSpeedHighDispersion8/: TRAJ1.csv  TRAJ2.csv  TRAJ3.csv  TRAJ4.csv  TRAJ5.csv  TRAJ6.csv  TRAJ7.csv  TRAJ8.csv
config/Trajectories/LowSpeedLowDispersion8/: TRAJ1.csv  TRAJ2.csv  TRAJ3.csv  TRAJ4.csv  TRAJ5.csv  TRAJ6.csv  TRAJ7.csv  TRAJ8.csv
config/Trajectories/LowSpeedMedDispersion8/: TRAJ1.csv  TRAJ2.csv
config/Trajectories/MedSpeedHighDispersion8/: TRAJ3.csv  TRAJ4.csv  TRAJ5.csv  TRAJ6.csv  TRAJ7.csv  TRAJ8.csv
docker/: Dockerfile-FlyChams-ROS2  Dockerfile-ROS2  build_image.sh  kill_container.sh  start_container.sh
experiments/layouts/agents/: position_vs_goal_layout.xml  resolution_factors_layout.xml
experiments/layouts/clusters/: centers_radii_layout.xml
experiments/layouts/targets/: targets_layout.xml
ros2_ws/: README.md
ros2_ws/src/airsim_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/airsim_wrapper/: CMakeLists.txt  package.xml
ros2_ws/src/airsim_wrapper/include/: airsim_wrapper.h
ros2_ws/src/airsim_wrapper/launch/: airsim_node.launch.py  get_image.launch.py
ros2_ws/src/airsim_wrapper/src/: airsim_get_image.cpp  airsim_node.cpp  airsim_wrapper.cpp
ros2_ws/src/flychams_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flychams_bringup/config/core/: frames.yaml  launch.yaml  params.yaml  system.yaml  topics.yaml
ros2_ws/src/flychams_bringup/config/package/: bringup.yaml  control.yaml  coordination.yaml  dashboard.yaml  perception.yaml  simulation.yaml  targets.yaml
ros2_ws/src/flychams_bringup/include/flychams_bringup/registration/: agent_registration.hpp  cluster_registration.hpp  gui_registration.hpp  target_registration.hpp
ros2_ws/src/flychams_bringup/launch/: flychams_airsim.launch.py  rosbag.launch.py  run.launch.py  rviz.launch.py  setup.launch.py
ros2_ws/src/flychams_bringup/rviz/: default.rviz
ros2_ws/src/flychams_bringup/src/: agent_registration_node.cpp  airsim_settings_node.cpp  airsim_settings_parser.cpp  cluster_registration_node.cpp  registrator_node.cpp  target_registration_node.cpp
ros2_ws/src/flychams_bringup/src/registration/: agent_registration.cpp  cluster_registration.cpp  gui_registration.cpp  target_registration.cpp
ros2_ws/src/flychams_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flychams_control/include/flychams_control/agent_control/: agent_controller.hpp  head_controller.hpp  pid_controller.hpp  uav_controller.hpp
ros2_ws/src/flychams_control/include/flychams_control/drone/: drone_control.hpp  drone_motion.hpp  drone_state.hpp  speed_planner.hpp
ros2_ws/src/flychams_control/include/flychams_control/head/: head_control.hpp
ros2_ws/src/flychams_control/include/flychams_control/head_control/: head_controller.hpp
ros2_ws/src/flychams_control/src/: agent_control_node.cpp  drone_control_node.cpp  drone_state_node.cpp  head_control_node.cpp
ros2_ws/src/flychams_control/src/agent_control/: agent_controller.cpp  head_controller.cpp  pid_controller.cpp  uav_controller.cpp
ros2_ws/src/flychams_control/src/drone/: drone_control.cpp  drone_motion.cpp  drone_state.cpp
ros2_ws/src/flychams_control/src/head/: head_control.cpp
ros2_ws/src/flychams_control/src/head_control/: head_controller.cpp
ros2_ws/src/flychams_coordination/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flychams_core/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flychams_core/include/flychams_core/base/: base_discoverer_node.hpp  base_module.hpp  base_registrator_node.hpp  discoverer_node.hpp  registrator_node.hpp
ros2_ws/src/flychams_core/include/flychams_core/config/: airsim_settings_creator.hpp  config_parser.hpp  config_tools.hpp  config_types.hpp  spreadsheet_parser.hpp
ros2_ws/src/flychams_core/include/flychams_core/ros/: topic_tools.hpp
ros2_ws/src/flychams_core/include/flychams_core/tools/: airsim_tools.hpp  config_tools.hpp  external_tools.hpp  tf_tools.hpp  topic_tools.hpp
ros2_ws/src/flychams_core/include/flychams_core/types/: config_types.hpp  core_types.hpp  ros_types.hpp
ros2_ws/src/flychams_core/include/flychams_core/utils/: camera_utils.hpp  math_utils.hpp  msg_conversions.hpp  ros_utils.hpp
ros2_ws/src/flychams_core/src/base/: base_discoverer_node.cpp  base_registrator_node.cpp  discoverer_node.cpp  registrator_node.cpp
ros2_ws/src/flychams_core/src/config/: config_parser.cpp
ros2_ws/src/flychams_core/src/tools/: airsim_tools.cpp  external_tools.cpp
ros2_ws/src/flychams_dashboard/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flychams_dashboard/include/flychams_dashboard/gui/: gui_controller.hpp
ros2_ws/src/flychams_dashboard/include/flychams_dashboard/marker/: marker_factory.hpp
ros2_ws/src/flychams_dashboard/include/flychams_dashboard/metrics/: metrics_factory.hpp
ros2_ws/src/flychams_dashboard/include/flychams_dashboard/visualization/: markers_factory.hpp  metrics_factory.hpp  visualization_factory.hpp
ros2_ws/src/flychams_dashboard/src/: gui_node.cpp  marker_factory_node.cpp  metrics_factory_node.cpp  visualization_node.cpp
ros2_ws/src/flychams_dashboard/src/gui/: gui_controller.cpp  gui_manager.cpp
ros2_ws/src/flychams_dashboard/src/marker/: marker_factory.cpp
ros2_ws/src/flychams_dashboard/src/metrics/: metrics_factory.cpp
ros2_ws/src/flychams_dashboard/src/visualization/: markers_factory.cpp  metrics_factory.cpp  visualization_factory.cpp
ros2_ws/src/flychams_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/flychams_interfaces/msg/: AgentGoal.msg  AgentMetrics.msg  AgentState.msg  ClusterInfo.msg  ClusterMetrics.msg  Crop.msg  Element.msg  GlobalMetrics.msg  Registration.msg  SolverDebug.msg  TargetInfo.msg  TargetMetrics.msg  TrackingGoal.msg  TrackingInfo.msg
ros2_ws/src/flychams_perception/: CMakeLists.txt  (+1 more)
tools/: build_airsim_dep.sh  build_ros2_ws.sh  clean_ros2_ws.sh  create_airsim_settings.sh  run_flychams_airsim.sh  run_plotjuggler.sh  run_simulation.sh  setup_simulation.sh
(+76 files in other folders)
