<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>airsim_wrapper</name>
  <version>1.0.0</version>
  <description>
    ROS Wrapper over Cosys-AirSim's C++ client library
  </description>
  <maintainer email="josloprui6@alum.us.es">Jose Francisco Lopez Ruiz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>airsim_interfaces</depend>

  <!-- Core build dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Core exec dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
