<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flychams_interfaces</name>
  <version>0.0.1</version>
  <description>
    Message, service, and action definitions for FlyingChameleons. 
    Provides shared interfaces used across perception, control, and other nodes.
  </description>
  <maintainer email="josloprui6@alum.us.es">Jose Francisco Lopez Ruiz</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool and dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>